1.9.0
Добавлено в списковый виджет: "Показать фото контакта для ближайшего события", "табуляция"